added style rules for "site wide search" block that appears in "branding" zone

--- a/dukelib/css/overrides.css
+++ b/dukelib/css/overrides.css
@@ -10,6 +10,13 @@ div#searchTabs ul li a span {font-size: 12px;}
 	padding: 3px 0;
 }
 
+.site-wide-search {
+	text-align: right;
+}
+	.region-site-search-inner {
+		margin-top: 10px;
+	}
+
 /********************* DUKE LIBRARY FOOTER (not the bottom links) ********/
 .dukelib-bottom {
 	background: #324299 url(../images/footer-blue-gradient.jpg) repeat-x top left;
