--- a/dukelib/css/overrides.css
+++ b/dukelib/css/overrides.css
@@ -1,3 +1,9 @@
+/*--------------- GENERAL ELEMENT OVERRIDES -----------*/
+h2.block-title {
+	color: #036;
+	border-bottom: 1px dotted #111;
+}
+
 #searchBox label {
     display: inline !important;
 }
