created style rules for html

--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -1,5 +1,8 @@
 /* CSS for Library Masthead */
-
+html {
+	font-family: Calibri, Geneva, Helvetica, Arial, sans-serif;
+	font-size: 10pt;
+}
 #masthead { /* box holding banner/logo, banner search box, banner links, and ask us button */
 	font-size: 12px;
 	background-image: url(http://library.duke.edu/imgs/blue-note/header-gradient.gif);
@@ -403,3 +406,7 @@ text-decoration: underline;
 	line-height: 1.25em;
 }
 
+/*-------------- PANELS and PANES, etc --------------*/
+.pane-content ul {
+	list-style-type: none;
+}
