--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -208,7 +208,7 @@ font-family: Arial, Helvetica, sans-serif;
 font-size: 80%;
 font-weight: bold;
 padding: 0;
-margin: 4px 0 0 0;
+margin: 4px 0 10px 0;
 }
 
 .breadcrumb a {
