--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -407,6 +407,16 @@ text-decoration: underline;
 }
 
 /*-------------- PANELS and PANES, etc --------------*/
-.pane-content ul {
+.pane-content ul.listNoDots {
 	list-style-type: none;
+}
+	.pane-content ul.listNoDots li {
+		margin-left: 0;
+	}
+
+.pane-content a {
+	text-decoration: none;
+}
+.pane-content a:hover {
+	text-decoration: underline;
 }
