--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -422,4 +422,39 @@ text-decoration: underline;
 	text-decoration: underline;
 }
 
-/* test! */
+
+
+
+/* Feature Text */
+
+.featureText {
+position: absolute;
+right: 10px;
+top: 10px;
+width: 330px;
+background: #444;
+border: 1px solid #333;
+padding: 10px;
+filter: alpha(opacity=80);
+filter: progid:DXImageTransform.Microsoft.Alpha(opacity=80);
+-moz-opacity: 0.80;
+opacity: 0.8;
+
+}
+
+.featureText h2 {
+color: white;
+font-size: 24px;
+font-family: Garamond, sans-serif;
+line-height: 1em;
+}
+
+
+.featureText p {
+font-size: 14px;
+font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+
