--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -430,7 +430,7 @@ text-decoration: underline;
 .featureText {
 position: absolute;
 right: 10px;
-top: 10px;
+top: 30px;
 width: 330px;
 background: #444;
 border: 1px solid #333;
@@ -469,7 +469,9 @@ color: #ddd;
 }
 
 .views-field-field-slider-image {
-border: 1px solid #ccc;	
+border: 1px solid #ccc;
+padding:0;
+margin:0;
 }
 
 
