--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -461,6 +461,8 @@ margin-bottom: .5em;
 font-size: 14px;
 font-family: Arial, Helvetica, sans-serif;
 color: #fff;
+line-height: 1.1em;
+padding-bottom: .5em;
 }
 
 .featureText a {
