--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -452,7 +452,7 @@ color: white;
 font-size: 24px;
 font-family: Garamond, sans-serif;
 line-height: 1em;
-margin-top:0;
+margin-top:.25em;
 margin-bottom: .5em;
 }
 
