--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -16,6 +16,13 @@ h1, h2 {
 	color: #036;
 }
 
+h2 {
+	font-size: 14px;
+	margin-top: 0.75em;
+	margin-bottom: 0.5em;
+	line-height: 1.5em;
+}
+
 a:hover, a:visited {
 	color: #369;
 }
