--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -4,6 +4,10 @@ html {
 
 }
 
+body {
+	font: 13px/1.5 'Helvetica Neue', Arial, 'Liberation Sans', FreeSans, sans-serif;
+}
+
 * {
 	font-family: Arial, Helvetica, sans-serif;
 }
