--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -113,9 +113,10 @@ margin: 13px 10px 0px 8px;
 }
 #bannerLinks {
 	color: #ffffff;
-	font-size: 100%;
+	font-size: 90%;
 	font-weight: bold;
 	padding-right: 8px;
+	margin-top: 5px;
 }
 
 #bannerLinks a:link,
