--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -236,7 +236,7 @@ margin-left: 0px;
 }
 
 #navigation ul.links li, #navigation ul.menu li {
-padding: 0 0 0 0;
+padding: 8px 0 0 0;
 }
 
 
@@ -244,7 +244,7 @@ padding: 0 0 0 0;
 
 .breadcrumb {
 font-family: Arial, Helvetica, sans-serif;
-font-size: 80%;
+font-size: 100%;
 font-weight: bold;
 padding: 0;
 margin: 4px 0 10px 0;
