--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -193,6 +193,7 @@ margin-top: -8px;
 -moz-box-shadow: 2px 2px 2px 0px #ccc;
 box-shadow: 2px 2px 2px 0px #CCC;
 padding-top: 0;
+padding: 4px;
 }
 
 #main-menu ul {
