--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -188,12 +188,11 @@ h1#page-title {
 width: 100%;
 clear: both;
 height: 30px;
-margin-top: -8px;
+margin-top: 0;
 -webkit-box-shadow: 2px 2px 2px 0px #CCC;
 -moz-box-shadow: 2px 2px 2px 0px #ccc;
 box-shadow: 2px 2px 2px 0px #CCC;
 padding-top: 0;
-padding: 4px;
 }
 
 #main-menu ul {
