--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -193,7 +193,8 @@ margin-top: -16px;
 -moz-box-shadow: 2px 2px 2px 0px #ccc;
 box-shadow: 2px 2px 2px 0px #CCC;
 padding-top: 0;
-padding-bottom: 8px;
+padding-bottom: 0;
+margin-bottom: 8px;
 }
 
 #main-menu ul {
