--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -532,14 +532,14 @@ margin:0;
 
 
 .panel-col-first {
-	width: 28%;
+	width: 30% !important;
 	border-right: 1px solid #E6E6E6;
 	padding-right: 10px;
 }
 
 
 .panel-col-last {
-	width: 28%;
+	width: 30% !important;
 	border-left: 1px solid #E6E6E6;
 	padding-left: 10px;
 }
