--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -528,6 +528,12 @@ margin:0;
 	border: 1px solid #DCDAD4;
 	border-radius: 5px 5px 5px 5px;
 	padding: 5px 15px;
+	margin-bottom: 20px;
+}
+
+.shadedBox h2 {
+	border-bottom: 1px dotted #DCDAD4;
+	padding-bottom: .5em;
 }
 
 
