--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -542,6 +542,19 @@ margin:0;
 }
 
 
+.aboutStyle h2 {
+	color: white;
+	background: url(http://library.duke.edu/imgs/common/effects/gradient_blue_31.jpg) repeat-x top left #314197;
+	margin-left: -16px;
+	margin-right: -16px;
+	padding: 10px 21px;
+	border-top: 1px solid white;
+	border-bottom: 1px solid white;
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+
 .panel-col {
 	
 	width: 31% !important;
