--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -582,3 +582,9 @@ margin:0;
 	padding: 3px;
 	border-radius: 5px 5px 5px 5px;
 }
+
+.button a {
+	text-align: center;
+	font-weight: bold;
+	text-transform: uppercase;
+}
