landing page right-column width tweak

--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -40,6 +40,17 @@ a {
 }
 
 
+
+
+/* Layout */
+
+.landing-page-right-sidebar {
+	width: 90% !important;	
+}
+
+
+
+
 /* CSS for Library Masthead */
 
 #masthead { /* box holding banner/logo, banner search box, banner links, and ask us button */
