--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -605,3 +605,78 @@ margin:0;
 	text-transform: uppercase;
 	display: block;
 }
+
+
+/* Twitter box */
+
+.twitter-feed-frontpage {
+	background: #2daebf;
+	padding: 10px 0 20px 0;
+	border-radius: 5px; 
+	-moz-border-radius: 5px; 
+	-webkit-border-radius: 5px; 
+}
+
+.twitter-feed-frontpage h2 {
+	font-family: Interstate, Verdana, Arial, Helvetica, sans-serif;
+	font-size: 15pt;
+	color: #fff;
+	text-align: center;
+	display: block;
+	margin:0;
+	padding:0 0 10px 0;
+	background: #2daebf;
+}
+
+.view-site-tweets {
+	background: #2daebf;	
+}
+
+.view-site-tweets ul {
+	list-style: none;
+	margin: 0;
+	padding:5px;
+	background: #fff;
+	margin: 0 5px 10px 5px;
+	border-radius: 10px; 
+	-moz-border-radius: 10px; 
+	-webkit-border-radius: 10px; 
+}
+
+.view-site-tweets ul li {
+	list-style: none;
+	margin:0;
+	padding:0 0 10px 0;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 9pt;
+	line-height: 1.35em;
+	
+}
+
+.view-site-tweets ul li.views-row-first {
+	border-bottom: 1px solid #eee;
+	margin-bottom: 10px;
+}
+
+.view-site-tweets ul li.views-row-last {
+	border-top: 1px solid #eee;
+	padding-top: 10px;
+}
+
+.view-site-tweets .more-link {
+	display: block;
+	padding: 5px 10px 20px 10px;
+	text-align: center;
+	background: #2daebf url('http://widgets.twimg.com/i/widget-logo.png') no-repeat top center;
+	border-radius: 0px 0px 5px 5px; 
+	-moz-border-radius: 0px 0px 5px 5px; 
+	-webkit-border-radius: 0px 0px 5px 5px;
+}
+
+.view-site-tweets .more-link a {
+	display: none;
+}
+
+.views-field-created-time {
+	color: #999;	
+}
