--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -618,13 +618,13 @@ margin:0;
 }
 
 .twitter-feed-frontpage h2 {
-	font-family: Interstate, Verdana, Arial, Helvetica, sans-serif;
-	font-size: 15pt;
 	color: #fff;
 	text-align: center;
 	display: block;
 	margin:0;
 	padding:0 0 10px 0;
+	-webkit-margin-before: 0;
+	-webkit-margin-after: 0;
 	background: #2daebf;
 }
 
