--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -611,13 +611,14 @@ margin:0;
 
 .twitter-feed-frontpage {
 	background: #2daebf;
-	padding: 10px 0 20px 0;
+	padding: 10px 0 10px 0;
 	border-radius: 5px; 
 	-moz-border-radius: 5px; 
 	-webkit-border-radius: 5px; 
 }
 
 .twitter-feed-frontpage h2 {
+	font-size: 16pt;
 	color: #fff;
 	text-align: center;
 	display: block;
