--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -767,3 +767,18 @@ div.exhibit-text-facet {
 .bottom-margin {
 	margin-bottom: 20px;	
 }
+
+.inner-center-column {
+	width: 31% !important;
+	border-right: 1px solid #E6E6E6;
+	padding-right: 10px;
+	margin-right: 10px;
+	border-left: 1px solid #E6E6E6;
+	padding-left: 10px;
+	margin-left: 10px;
+}
+
+.inner-left-column, 
+.inner-right-column {
+	width: 33% !important;
+}
