--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -20,10 +20,18 @@ h1, h2 {
 	color: #036;
 }
 
+h3, h4 {
+	color: #036;
+}
+
 h2 {
 	font-size: 14px;
 	margin-top: 0.75em;
 	margin-bottom: 0.5em;
+	line-height: 1.5em;
+}
+
+h4 {
 	line-height: 1.5em;
 }
 
@@ -756,6 +764,15 @@ div.exhibit-text-facet {
 
 
 
+/* Tables */
+
+.infoTable td {
+padding: .5em 1em .5em 1em;
+border-bottom: 1px dotted #DCDAD4;
+}
+
+
+
 /* Layout */
 
 .landing-page-right-sidebar {
@@ -784,3 +801,5 @@ div.exhibit-text-facet {
 .inner-right-column {
 	width: 31% !important;
 }
+
+
