--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -529,6 +529,7 @@ text-decoration: underline;
 
 
 
+
 /* Feature Text */
 
 .view-featured-slider {
@@ -808,6 +809,32 @@ div.exhibit-text-facet {
 	font-size: 11px;
 }
 
+
+/* Feed Items */
+
+
+ul.feedItemList {
+	list-style-position: inside;
+	list-style-image: none;
+	margin: 1em 0;
+	padding: 0;
+}
+
+li.feedItem {
+	text-indent: 0;
+	padding-left: 0;
+	margin: 0 0 1em 0 !important;
+}
+
+.feedItemTitle {
+	font-weight: bold;
+	font-size: 105%;
+}
+
+.feedItemPubDate {
+	color: #777;
+	font-size: 80%;
+}
 
 
 /* Tables */
