--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -859,6 +859,7 @@ margin:0;
 
 table.dataTable {
 	padding-left: 10px;
+	margin-top: 0;
 	margin-bottom: 0;
 	border-collapse: collapse;
 	border: 1px solid #036;
