Disabled the panel-col class, allowing customized "panel" layouts to define the style definition

--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -625,7 +625,7 @@ margin:0;
 	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
 }
 
-
+/*
 .panel-col {
 	
 	width: 31% !important;
@@ -646,6 +646,7 @@ margin:0;
 	margin-left: 0;
 	
 }
+*/
 
 .imageFrame {
 	background: none repeat scroll 0 0 white;
