--- a/data_and_gis/css/library-styles.css
+++ b/data_and_gis/css/library-styles.css
@@ -1900,20 +1900,20 @@ img.exhibit-toolboxWidget-button {
 }
 
 #edit-buttons {
-    width: 100%;
-    float: left;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    background: rgba(80,80,80,.80);
-    border: 1px solid #333;
-    padding: 10px 0 10px 60px;
+    width: 100% !important;
+    float: left !important;
+    position: fixed !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    background: rgba(80,80,80,.80) !important;
+    border: 1px solid #333 !important;
+    padding: 10px 0 10px 60px !important;
 }
 
 #edit-buttons input {
-    font-size: 120%;
-    padding: 5px 10px 5px 10px;
-    margin-right: 20px;
+    font-size: 120% !important;
+    padding: 5px 10px 5px 10px !important;
+    margin-right: 20px !important;
 }
 
 
